src/objects/JBCXM__GSColorConfig__c.object
<CustomObject>
    <description>Stores color configuration at global level.</description>
    <fields>
        <fullName>JBCXM__ColorList__c</fullName>
        <label>Color List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Column__c</fullName>
        <label>Column</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Filters__c</fullName>
        <label>Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Object__c</fullName>
        <label>Object</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <label>GS Color Config</label>
    <nameField>
        <label>GS Color Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Color Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>